--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.font-600 {
+  font-weight: 600;
 }
 body {
   background-color: rgb(37, 37, 37);
@@ -13,16 +17,58 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 0.5s;
 }
-.card {
-  width: 200px;
-  height: 300px;
-  background-color: rgb(209, 209, 209);
-  border: 1px solid black;
-  margin: 0 10px;
+.flip-container {
+  min-width: 220px;
+  height: 307px;
+  perspective: 1000px;
+  cursor: pointer;
+  /* padding: 10px 7px; */
+  margin: 10px;
 }
 
+.card-flipper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  /* padding: 10px; */
+}
+
+.flip-container.flip .card-flipper {
+  transform: rotateY(180deg);
+}
+
+.card {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.card-front {
+  background: white;
+  z-index: 2;
+  padding: 10px 7px;
+}
+
+.card-back {
+  background-image: url('https://tcg.pokemon.com/assets/img/global/tcg-card-back-2x.jpg');
+  background-size: cover;
+  background-position: center;
+  transform: rotateY(180deg);
+}
+.img-box {
+  width: 150px;
+  margin: 0 auto;
+  border: 1px solid #eeeeee;
+}
+.img-big {
+  width: 100%;
+}
 /* button */
 .btn-container {
   display: flex;
