--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,29 +2,60 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Futura;
+  /* font-family: Gill Sans; */
 }
-.font-600 {
-  font-weight: 600;
-}
-body {
-  background-color: rgb(37, 37, 37);
-}
-/* cards */
-.cards-container {
-  width: 100%;
-  height: 600px;
+.header-container {
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.card-font-name {
+  font-weight: 600;
+  font-size: 12px;
+  margin-left: 14px;
+}
+.card-font-id {
+  font-size: 12px;
+  float: right;
+  margin-right: 24px;
+  margin-top: 5px;
+}
+body {
+  background-color: rgb(237, 237, 237);
+}
+.h1-text {
+  color: #004177;
+  font-weight: 400;
+}
+/* cards */
+.cards-container {
+  position: relative;
+  width: 1440px;
+  height: 327px;
+  margin: 0 auto;
+  /* top: 100px; */
+}
+
 .flip-container {
-  min-width: 220px;
+  position: relative;
+  width: 220px;
   height: 307px;
   perspective: 1000px;
   cursor: pointer;
   /* padding: 10px 7px; */
   margin: 10px;
+  float: left;
+  transition: ease-in-out 0.5s;
+  top: 0;
+}
+.hide {
+  top: -200px;
+  opacity: 0;
+}
+.flip-container:hover {
+  scale: 1.2;
 }
 
 .card-flipper {
@@ -47,12 +78,17 @@ body {
   backface-visibility: hidden;
   border-radius: 8px;
   overflow: hidden;
+  border: 1px solid #444;
+  box-shadow: 10px 10px 30px rgba(31, 31, 31, 0.3);
 }
 
 .card-front {
   background: white;
   z-index: 2;
-  padding: 10px 7px;
+  padding: 7px 7px;
+  background-image: url('../assets/images/card-bg-1.png');
+  background-size: cover;
+  background-position: center;
 }
 
 .card-back {
@@ -62,12 +98,18 @@ body {
   transform: rotateY(180deg);
 }
 .img-box {
-  width: 150px;
-  margin: 0 auto;
-  border: 1px solid #eeeeee;
+  width: 200px;
+  height: 118px;
+  margin: 8px auto;
+  /* border: 1px solid #eeeeee; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 .img-big {
-  width: 100%;
+  max-width: 200px;
+  max-height: 100px;
 }
 /* button */
 .btn-container {
@@ -76,6 +118,40 @@ body {
 }
 
 .btn {
+  all: unset;
   padding: 10px 20px;
   margin: 0 10px;
+  width: 150px;
+  height: 40px;
+  font-size: 18px;
+  font-weight: 100;
+  color: #e0e0e0;
+  background-color: #004177;
+  border: 3px solid #004177;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 5px;
+  transition: all 0.3s;
+}
+.btn:hover {
+  background-color: #00417735;
+  color: #004177;
+}
+.dropdown-menu {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.types {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 86px;
+  justify-content: center;
+  align-items: center;
+}
+.types img {
+  width: 100px;
+  margin-bottom: 10px;
 }
